Removing bottom margin to make the nav bar align correctly

--- a/css/site.css
+++ b/css/site.css
@@ -3,6 +3,5 @@ header {
 	color: #FFFFFF;
 	text-align: center;
 	padding: 1.5em 0;
-	margin-bottom: 1.5em;
 	letter-spacing: 0.25em;
 }
